--- a/diseño.css
+++ b/diseño.css
@@ -1,5 +1,13 @@
-td{
-  border-style: groove;
-  width: 40px;
-  height: 40px;
+#cabezaSerpiente {
+  width: 20px;
+  height: 20px;
+  background-color: #74CABE;
+}
+#contenedor {
+  width: 500px;
+  height: 500px;
+  border: solid 1px;
+  border-color: black;
+  margin-right: auto;
+  margin-left: auto;
 }
